aggiunta diagramma UC 53, correzioni minori

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
@@ -38,6 +38,13 @@
             \end{itemize}
     \end{itemize}
 
+\begin{figure}[H]
+    \centering
+        \includegraphics[scale=0.50]{src/CasiDUso/immagini/StanzaIgienizzata.png}
+            \caption{Diagramma relativo alla pulizia di una stanza}
+    \end{figure}
+    
+
 \paragraph{UC-53.1 Scansione del tag RFID per segnalare la pulizia di una stanza}
 
     \begin{itemize}
