--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
@@ -1,8 +1,3 @@
-\begin{figure}[H]
-    \centering
-      \includegraphics[scale=0.50]{src/CasiDUso/immagini/LoginWeb.png}
-    \caption{Diagramma relativo l'autenticazione presso l'applicazione web}
-\end{figure}
 
 \paragraph{UC-1 Login web}
 \begin{itemize}
@@ -21,6 +16,13 @@
 		      \item se le credenziali sono corrette, il sistema aggiorna la schermata del dispositivo con la \glo{dashboard} dell'amministratore.
 	      \end{enumerate}
 \end{itemize}
+
+\begin{figure}[H]
+    \centering
+      \includegraphics[scale=0.50]{src/CasiDUso/immagini/LoginWeb.png}
+    \caption{Diagramma relativo all'autenticazione presso l'applicazione web}
+\end{figure}
+
 
   \paragraph{UC-1.1 Inserimento credenziali}
   \begin{itemize}
