--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
@@ -194,19 +194,36 @@
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
 		  		\item l'utente seleziona la funzionalità di login;
-		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form (UC-35.1 Inserimento dell'indirizzo email per il login);
-		  		\item l'utente inserisce la password nell'apposito form (UC-35.2  Inserimento della pasasword per il login);
+		  		\item l'utente inserisce le proprie credenziali all'interno del form per l'autenticazione (UC-35.1 Inserimento delle credenziali per il login);
 		  		\item l'utente invia i dati al sistema;
 		  		\item il sistema completa la richiesta di autenticazione qualora le credenziali vengano riconosciute e aggiorna la schermata del dispositivo con la dashboard personale dell'utente. In caso contrario l'autenticazione non viene completata e si rimane nella pagina di login ;
 	  		\end{enumerate}
-	  	\item \textbf{Estensioni:}
+	\end{itemize}
+
+\paragraph{UC-35.1 Inserimento delle credenziali per il login}
+
+	\begin{itemize}
+		\item \textbf{Attore primario:} utente non autenticato;
+
+		\item \textbf{Descrizione:} l'utente vuole inserire le proprie credenziali nell'apposito form nella schermata di login;
+
+		\item \textbf{Precondizioni:} l'utente ha selezionato selezionato la funzionalità di login;
+
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo le proprie credenziali;
+
+		\item \textbf{Scenario principale:}
+	  		\begin{enumerate}
+		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login (UC-35.1.1 Inserimento dell'indirizzo email per il login); 
+		  		\item l'utente inserisce la propria password nell'apposito form nella schermata di login (UC-35.1.2 Inserimento della password per il login);
+	  		\end{enumerate}
+	    \item \textbf{Estensioni:}
 	  		\begin{enumerate}
 		  		\item UC-36 Errore: coppia di credenziali non riconosciuta dal sistema.
 	  		\end{enumerate}
 	\end{itemize}
 
 
-\paragraph{UC-35.1 Inserimento dell'indirizzo email per il login}
+\paragraph{UC-35.1.1 Inserimento dell'indirizzo email per il login}
 
 	\begin{itemize}
 		\item \textbf{Attore primario:} utente non autenticato;
@@ -223,7 +240,7 @@
 	  		\end{enumerate}
 	\end{itemize}
 
-\paragraph{UC-35.2 Inserimento della password per il login}
+\paragraph{UC-35.1.2 Inserimento della password per il login}
 
 	\begin{itemize}
 		\item \textbf{Attore primario:} utente non autenticato;
