--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
@@ -196,7 +196,7 @@
 		  		\item l'utente seleziona la funzionalità di login;
 		  		\item l'utente inserisce le proprie credenziali all'interno del form per l'autenticazione (UC-35.1 Inserimento delle credenziali per il login);
 		  		\item l'utente invia i dati al sistema;
-		  		\item il sistema completa la richiesta di autenticazione qualora le credenziali vengano riconosciute e aggiorna la schermata del dispositivo con la dashboard personale dell'utente. In caso contrario l'autenticazione non viene completata e si rimane nella pagina di login ;
+		  		\item il sistema completa la richiesta di autenticazione qualora le credenziali vengano riconosciute e aggiorna la schermata del dispositivo con la dashboard personale dell'utente. In caso contrario l'autenticazione non viene completata e si rimane nella pagina di login.
 	  		\end{enumerate}
 	\end{itemize}
 
@@ -214,7 +214,7 @@
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
 		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login (UC-35.1.1 Inserimento dell'indirizzo email per il login); 
-		  		\item l'utente inserisce la propria password nell'apposito form nella schermata di login (UC-35.1.2 Inserimento della password per il login);
+		  		\item l'utente inserisce la propria password nell'apposito form nella schermata di login (UC-35.1.2 Inserimento della password per il login).
 	  		\end{enumerate}
 	    \item \textbf{Estensioni:}
 	  		\begin{enumerate}
