--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Gestione autenticazine}\label{sec:GestioneAutenticazineM}
+\subsubsection{Gestione autenticazione}\label{sec:GestioneAutenticazineM}
 \input{src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex}
 
 \subsubsection{Utilizzo dipendente}\label{sec:Dipendente}
