--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
@@ -71,21 +71,21 @@
             \end{enumerate}
     \end{itemize}
 
-%TODO: guardare come farlo
-\paragraph{UC-46.4 Selezione fascia oraria}
+
+\paragraph{UC-46.4 Selezione orario d'inizio}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
 
-        \item \textbf{Descrizione:} il dipendente vuole selezionare la fascia oraria in cui intende occupare la postazione;
+        \item \textbf{Descrizione:} il dipendente vuole selezionare l'orario d'inizio della postazione;
 
-        \item \textbf{Precondizioni:} il dipendente ha selezionato il form in cui inserire l'intervallo di utilizzo della postazione;
+        \item \textbf{Precondizioni:} il dipendente ha selezionato il form in cui inserire l'orario d'inizio della prenotazione;
 
-        \item \textbf{Postcondizioni:} il dipendente ha inserito con successo la fascia oraria di prenotazione;
+        \item \textbf{Postcondizioni:} il dipendente ha inserito con successo l'orario d'inizio della prenotazione;
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                \item il dipendente seleziona una postazione dalla lista di postazioni prenotabili nella stanza;
+                \item il dipendente seleziona un orario disponibile da una lista di orari in cui la prenotazione è prenotabile;
             \end{enumerate}
     \end{itemize}
 
