--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
@@ -1,5 +1,4 @@
 %diagramma
-%TODO da implementare. Da questa schermata, l'amministratore può ricercare le postazioni per ....
 \paragraph{UC-21 Visualizzazione di tutte le postazioni presenti nel sistema}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
@@ -8,7 +7,7 @@
     \item \textbf{Postcondizione:} l'amministratore visualizza tutte le postazioni all'interno della stanza selezionata;
     \item \textbf{Scenario principale:}
     \begin{itemize}
-        \item l'amministratore, dall'elenco delle stanze registrate nel sistema, seleziona una stanza desiderata ed accede alla schermata di visualizzazione delle postazioni registrate al suo interno o, in alternativa, filtra le postazioni per la stanza di appartenenza;
+        \item l'amministratore, dall'elenco delle stanze registrate nel sistema, seleziona una stanza desiderata ed accede alla schermata di visualizzazione delle postazioni registrate al suo interno. Da questa schermata, l'amministratore può visualizzare le postazioni per codice identificativo (UC-21.1 Visualizzazione postazione per codice identificativo), visualizzare tutte le postazioni prenotate (UC-21.2 Visualizzazione postazioni prenotate), visualizzare le postazioni occupate (UC-21.3 Visualizzazione postazioni occupate), visualizzare le postazioni libere (UC-21.4 Visualizzazione postazioni libere), visualizzare le postazioni igienizzate (UC-21.5 Visualizzazione postazioni igienizzate), visualizzare le postazioni sporche (UC-21.6 Visualizzazione postazioni sporche), visualizzare le postazioni abilitate(UC-21.7 Visualizzazione postazioni abilitate) ed, infine, visualizzare le postazioni disabilitate (UC-21.8 Visualizzazione postazioni disabilitate). In alternativa, l'amministratore può filtrare le postazioni anche per stanza di appartenenza.
         \item l'amministratore visualizza tutte le postazioni presenti nella stanza precedentemente selezionata.
     \end{itemize}
 \end{itemize}
