--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
@@ -297,7 +297,7 @@
             \begin{enumerate}
                 \item il dipendente seleziona la funzionalità di rilevamento della presenza;
                 \item il dipendente scansiona il tag RFID della postazione in cui è seduto (UC-50.1 Scansione del tag RFID per segnalare la propria presenza nella postazione);
-                \item il sistema fornisce informazioni relative allo stato della postazione (UC-50.2 Visualizzazione informazioni postazione). Qualora la postazione risulti non disabilitata o non occupata il sistema invierà una richiesta di avvio dell'utilizzo;
+                \item il sistema fornisce informazioni relative allo stato della postazione (UC-50.2 Visualizzazione stato della postazione). Qualora la postazione risulti non disabilitata o non occupata il sistema invierà una richiesta di avvio dell'utilizzo;
                 \item il dipendente conferma l'utilizzo della postazione (UC-50.3 Avvio utilizzo);
                 \item il sistema aggiorna lo stato della postazione da libera a occupata.
             \end{enumerate}
@@ -322,7 +322,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-50.2 Visualizzazione informazioni postazione}
+\paragraph{UC-50.2 Visualizzazione stato della postazione}
 
 \begin{itemize}
     \item \textbf{Attore primario:} dipendente;
