--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
@@ -46,6 +46,47 @@
             \item UC-2 Errore: coppia di credenziali non riconosciuta.
           \end{itemize}
   \end{itemize}
+  
+\begin{figure}[H]
+    \centering
+      \includegraphics[scale=0.50]{src/CasiDUso/immagini/InserimentoCredenzialiWeb.png}
+    \caption{Diagramma relativo all'inserimento delle credenziali nell'applicazione web}
+\end{figure}
+  
+  \paragraph{UC-1.1.1 Inserimento dell'indirizzo email per il login}
+
+	\begin{itemize}
+		\item \textbf{Attore primario:} utente non autenticato;
+
+		\item \textbf{Descrizione:} l'utente vuole inserire il proprio indirizzo email nell'apposito form nella schermata di login;
+
+		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento dell'indirizzo email;
+
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo il proprio indirizzo email;
+
+		\item \textbf{Scenario principale:}
+	  		\begin{enumerate}
+		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login; 
+	  		\end{enumerate}
+	\end{itemize}
+
+\paragraph{UC-1.1.2 Inserimento della password per il login}
+
+	\begin{itemize}
+		\item \textbf{Attore primario:} utente non autenticato;
+
+		\item \textbf{Descrizione:} l'utente vuole inserire la propria password nell'apposito form nella schermata di login;
+
+		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento della password;
+
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo la propria password;
+
+		\item \textbf{Scenario principale:}
+	  		\begin{enumerate}
+			  \item l'utente inserisce la propria password nell'apposito form nella schermata di login; 
+	  		\end{enumerate}
+	\end{itemize}
+
 
 \paragraph{UC-2 Errore: coppia di credenziali non riconosciuta}
 \begin{itemize}
