aggiunti UC sullo scenario login web

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
@@ -36,8 +36,8 @@
   
     \item \textbf{Scenario principale:}
           \begin{enumerate}
-            \item l'utente inserisce il proprio indirizzo email;
-            \item l'utente inserisce la propria password;
+            \item l'utente inserisce il proprio indirizzo email (UC-1.1.1 Inserimento dell'indirizzo email per il login);
+            \item l'utente inserisce la propria password (UC-1.1.2 Inserimento della password per il login);
             \item l'utente conferma l'inserimento;
             \item il sistema elabora i dati ed in caso di credenziali errate restituisce un messaggio d'errore esplicativo (UC-2 Errore: coppia di credenziali non riconosciuta), altrimenti procede con la richiesta.
           \end{enumerate}
